<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Some app</string>
    <string name="addPictureDesc">Please insert photo</string>
    <string name="actionName">Action Name: </string>
    <string name="actionDescription">Description: </string>
    <string name="actionTimes">Times: </string>
    <string name="actionOrgans">Train Organs: </string>
    <string name="actionUsage">Usage: </string>
    <string name="actionReference">References: </string>
    <string name="confirm">Confirm </string>
    <string name="update">Update </string>
    <string name="actionRepeat">Day </string>
    <string name="chooseDay">Click Here to choose </string>
    <string name="login">Login </string>
    <string name="register">Register </string>
    <string name="password_label">Password </string>
    <string name="confirm_password_label">Confirm Password </string>
    <string name="login_label">Email </string>
    <string name="email_hint">abc@example.com </string>
    <string name="empty_email">Empty email </string>
    <string name="empty_password">Empty password </string>
    <string name="not_matched_password">Password not matched </string>
    <string name="ERROR_EMAIL_ALREADY_IN_USE">This email address is already in used</string>
    <string name="ERROR_INVALID_EMAIL">This email address is badly formatted</string>
    <string name="ERROR_WEAK_PASSWORD">Weak Password</string>

    <string name="day1">Day 1</string>
    <string name="day2">Day 2</string>
    <string name="day3">Day 3</string>
    <string name="day4">Day 4</string>
    <string name="day5">Day 5</string>
    <string name="day6">Day 6</string>
    <string name="day7">Day 7</string>
    <string name="routineSetting">Setting</string>
    <string name="routineAddButton">+</string>
    <string name="routineDescription"> Your daily routine : </string>
    <string name="cannotBeEmpty">Cannot be empty</string>
    <string name="aboutLabel">About</string>
    <string name="aboutContent">This app is to ......</string>
    <string name="developerLabel">Developer</string>
    <string name="developerContent">So Ka Leung (1204542)\n\nLeung Tsz Kin(12049855)\n\nCheung Man Fai(XXXXXXXX)</string>
    <string name="pref_color" translatable="false">Change color Setting</string>
    <string name="pref_color_default" translatable="false">Orange</string>
    <string name="not_data_in_database" translatable="false">You have not add any exercises for  </string>
    <!--
=======
    <string name= "day1">Day 1</string>
    <string name= "day2">Day 2</string>
    <string name= "day3">Day 3</string>
    <string name= "day4">Day 4</string>
    <string name= "day5">Day 5</string>
    <string name= "day6">Day 6</string>
    <string name= "day7">Day 7</string>
    <string name= "routineSetting">Setting</string>
    <string name= "routineAddButton">+</string>
    <string name ="routineDescription"> Your daily routine : </string>
    <string name ="cannotBeEmpty">Cannot be empty</string>
    <string name ="aboutLabel">About</string>
    <string name ="aboutContent">This app is to ......</string>
    <string name ="developerLabel">Developer</string>
    <string name ="developerContent">So Ka Leung (1204542)\n\nLeung Tsz Kin(12049855)\n\nCheung Man Fai(12042240)</string>
    <string name ="pref_color">Change color Setting</string>
    <string name ="pref_color_default">Orange</string>
    <string name ="not_data_in_database">You have not add any exercises for  </string>
>>>>>>> origin/master
-->
    <string-array name="colorTheme">
        <item>Orange</item>
        <item>Green</item>
        <item>Purple</item>
    </string-array>
</resources>